fixed center-alignment of page on bigger monitors

--- a/styles.css
+++ b/styles.css
@@ -5,8 +5,10 @@ body {
 
 #background {
     background-image: url(images/stars.svg);
-    height: 750px;
-    width: 1200px;
+    margin: auto;
+    max-width: 100%;
+    height:750px;
+    width:1200px;
 }
 
 /* animation to make icons float */
@@ -27,7 +29,7 @@ body {
 main {
     display: flex;
     margin: auto;
-    padding-left: 200px;
+    padding-left: 215px;
     padding-right: 100px;
 }
 
